# cocktail-maker

./: .clang-format  .codespellrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  antora-playbook.yml  flake.nix  nix-iterate.sh  package-lock.json  package.json  pyproject.toml  schema.xml  v2.md  vcpkg.json
cocktail-maker/: CMakeLists.txt  application.cpp  application.cppm  async_machine_interface.cppm  async_machine_protocol_server.cpp  async_machine_protocol_server.cppm  async_machine_protocol_server.test.cpp  awaitable_bool.cppm  awaitable_bool.test.cpp  comms_adapter.cppm  comms_adapter.test.cpp  dispense_command.cppm  dispenser.cppm  execute_recipe.cppm  execute_recipe.test.cpp  glass.cpp  glass.cppm  ingredient.cpp  ingredient.cppm  ingredient.test.cpp  lib.cppm  logging.cppm  machine_protocol.cppm  machine_protocol.test.cpp  overloaded.cppm  pod.cpp  pod.cppm  pod.test.cpp  pod_algorithms.cppm  pod_discovery.cppm  pod_dispatcher.cppm  pod_id.cppm  pod_manager.cppm  pod_registry.cppm  pod_registry.test.cpp  pod_types.cppm  recipe.cpp  recipe.cppm  recipe.test.cpp  recipe_boost.cppm  (+13 more)
core/: CMakeLists.txt  any_io_stream.cpp  any_io_stream.cppm  asio.cppm  awaitable_bool.cpp  awaitable_bool.cppm  awaitable_bool.test.cpp  comms_adapter.cppm  comms_adapter.test.cpp  lib.cppm  logging.cppm  overloaded.cppm  retry.cppm  strong_type.cppm  strong_type.test.cpp  units.cppm
gui/: CMakeLists.txt
gui/src/: async_ui.cppm  async_ui.test.cpp  config.in.hpp  dispenser_calibration_bridge.cpp  dispenser_calibration_bridge.cppm  glass_context_bridge.cppm  gui_application.cpp  gui_application.cppm  ingredient.cppm  lib.cppm  main.cpp  maschine_adapter.cppm  maschine_adapter.test.cpp  operator_auth.cppm  operator_auth.test.cpp  process_context_bridge.cpp  process_context_bridge.cppm  recipe_adapter.cppm  recipe_adapter.test.cpp  recipe_context_bridge.cpp  recipe_context_bridge.cppm  station_state_bridge.cpp  station_state_bridge.cppm  station_state_bridge.test.cpp  ui_log_sink.cppm
gui/ui/: admin-area.slint  app-window.slint  components.slint  data.slint  pages.slint  palette.slint  popups.slint
gui/ui/admin/: dispenser-calibration.slint  glass-config-tab.slint  pod-config-tab.slint
gui/ui/components/: boost-text.slint  button.slint  chip.slint  command-item.slint  command-list-item.slint  corner-deco.slint  glass-card.slint  glass-icon.slint  large-text.slint  medium-text.slint  pulse-dot.slint  recipe-card.slint  recipe-tags.slint  separator-text.slint  separator.slint  seperator-text.slint  seperator.slint  small-text.slint  system-log.slint
gui/ui/globals/: dispenser-calibration-context.slint  glass-context.slint  process-context.slint  recipe-context.slint  station-state-context.slint
gui/ui/pages/: boot-screen.slint  mix-error-page.slint  mix-glass-selection-page.slint  mix-progress-page.slint  mix-success-page.slint  page.slint  recipe-detail-page.slint  recipe-list-page.slint  startup-page.slint  test.slint
gui/ui/popups/: manual_command_popup.slint  operator-pin-popup.slint
src/: CMakeLists.txt  config.hpp.in
src/include/cm/: async.hpp  execution_context.hpp  execution_event_sink.hpp  glass.hpp  glass_store.hpp  ingredient.hpp  ingredient_id.hpp  ingredient_store.hpp  io.hpp  led_state_manager.hpp  liquid_dispenser.hpp  liquid_dispenser_registry.hpp  liquid_dispenser_simulated.hpp  liquid_dispenser_stepper_pump.hpp  liquid_dispenser_valve.hpp  logging.hpp  machine_state.hpp  operation_state.hpp  overloads.hpp  pump.hpp  recipe.hpp  recipe_booster.hpp  recipe_executor.hpp  recipe_store.hpp  scoped_action.hpp  units.hpp
src/include/cm/commands/: command.hpp  command_id.hpp  command_visitor.hpp  dispense_liquid_cmd.hpp  manual_cmd.hpp
src/include/cm/events/: command_finished_event.hpp  command_progress_event.hpp  command_started_event.hpp  event_bus.hpp  execution_canceled_event.hpp  manual_action_event.hpp  recipe_finished.hpp  refill_ingredient_event.hpp
src/include/cm/hw/: drv8825_stepper_moter.hpp  hx711_sensor.hpp  motor.hpp  pin_selection.hpp  stepper_moter.hpp  stepper_motor.hpp  weight_sensor.hpp  weight_sensor_simulated.hpp  wled_serial.hpp
src/src/: execution_context.cpp  glass_store.cpp  ingredient_store.cpp  led_state_manager.cpp  liquid_dispenser_registry.cpp  liquid_dispenser_simulated.cpp  liquid_dispenser_stepper_pump.cpp  logging.cpp  machine_state.cpp  recipe.cpp  recipe_booster.cpp  recipe_executor.cpp  recipe_store.cpp  units.cpp
src/src/commands/: command.cpp  command_event_publisher.cpp  command_event_publisher.hpp  command_id.cpp  dispense_liquid_cmd.cpp  manual_cmd.cpp
src/src/events/: event_bus.cpp
src/src/hw/: drv8825_stepper_moter.cpp  hx711_sensor.cpp  weight_sensor.cpp  weight_sensor_simulated.cpp  wled_serial.cpp
src/tests/: CMakeLists.txt  test_glass_store.cpp  test_recipe.cpp  test_recipe_booster.cpp
ui/app/: ApplicationState.hpp  CMakeLists.txt  DebugWindow.qml  DispenserSettingsPage.qml  GlassSelectionPage.qml  Main.qml  MixPage.qml  RecipeDetailPage.qml  RecipeListPage.qml  SettingsPage.qml  SettingsWeightSubPage.qml  main.cpp
ui/db/: CMakeLists.txt
ui/db/include/cm/db/: db.hpp
ui/db/src/: db.cpp
ui/db/src/recipes/: mojito.hpp  moscow_mule.hpp  passion_rum_cooler.hpp  screwdriver.hpp  tequila_sunrise.hpp  virgin_sunrise.hpp
ui/tests/: CMakeLists.txt  application_path.in.hpp  test_ui_cocktail_selection.cpp
ui/ui/: Button.qml  CMakeLists.txt  Section.qml
ui/ui/include/cm/ui/: ExecutionContextAdapter.hpp  GlassAdapter.hpp  GlassDetector.hpp  GlassListModel.hpp  GlassStoreForeign.hpp  IngredientStoreForeign.hpp  (+9 more)
ui/ui/qml/: BusyIndicator.qml  Button.qml  ImageCard.qml  InvisibleLongPressButton.qml  Label.qml  ManualCommandPopup.qml  Page.qml  ScrollIndicator.qml  Section.qml  Slider.qml
ui/ui/src/: ExecutionContextAdapter.cpp  GlassDetector.cpp  GlassListModel.cpp  LiquidDispenserListModel.cpp  LiquidDispenserModel.cpp  RecipeBoosterAdapter.cpp  RecipeCommandStatusModel.cpp  RecipeDetail.cpp  RecipeExecutorAdapter.cpp  RecipeFactory.cpp  RecipeListModel.cpp
(+124 files in other folders)
